Ensure mentions are visible to current_user

--- a/app/assets/stylesheets/chats.scss
+++ b/app/assets/stylesheets/chats.scss
@@ -22,6 +22,10 @@ body {
   --str-chat__own-message-bubble-color: white;
 }
 
+.str-chat__message--me {
+  --str-chat__message-mention-color: white;
+}
+
 .str-chat__message-input {
   position: abolute;
   bottom: 0.5rem;
